@@ -1,1 +1,2 @@
+rem JDK_JAVA_OPTIONS="--add-modules java.xml.bind"
 java -cp scouter.webapp.jar;lib/* scouterx.webapp.main.WebAppMain
